# AutoRoboticsBench

./: .gitattributes  .gitignore  Dockerfile  INSTRUCTIONS.md  README.md  benchmark.json  judge.py  loop.py  plot_progress.py  program.md  program_autorobobench.md  pyproject.toml  render_eval_video.py  research.py  run_experiment.py  setup.py  train.py  visualize_evaluation.py
analysis/: .gitignore
analysis_h100/: benchmark_4task_summary.csv  runs.csv
autorobobench/: cli.py  policy_artifacts.py
configs/: autorobobench_v0.json  compute.yaml.example
docker/: build.sh  entrypoint.sh  run_eval_container.sh  run_train_container.sh
docs/: autorobobench_v0.md  bench_task_instructions.md  robocasa_task_baselines.md  robotwin_bc3_minimal.md
eval/: eval_autorobobench_robocasa_bc5.py  eval_robocasa_chunk_policy.py  eval_robocasa_policy_ensemble.py  eval_robocasa_tiny_evaluator_correlation.py  render_robocasa_chunk_policy.py  render_robocasa_flow_rgb_rollout.py  render_robocasa_policy_ensemble.py  train_temporal_chunk_bc_robocasa.py
models/: robocasa_flow_rgb.py  robocasa_sequence_flow.py  robocasa_tiny_evaluator.py
research/: cosmos_robocasa_finetune.md  robocasa_bc5_history_act_findings.md  robocasa_both_task_indices.md  robocasa_world_model_evaluator_v0.md
robotbench/: __init__.py  aloha_envs.py  config.py  envs.py  evaluate.py  logging.py  metrics.py  mujoco_envs.py  safety.py  train.py
scripts/: aggregate_runs.py  check_policy_architecture.py  collect_artifacts.py  collect_failed_world_model_rollouts.py  collect_policy_probes.py  commit_improvement.py  (+19 more)
(+286 files in other folders)
